<resources>
    <string name="app_name">Bioinformatics Flashcard</string>
    <string name="content_categories">Content Categories</string>
    <string name="introduction">Introduction</string>
    <string name="learning_roadmap">Learning Roadmap</string>
    <string name="genomics">Genomics</string>
    <string name="metagenomics">Meta\ngenomics</string>
    <string name="metabolomics">Metabolomics</string>
    <string name="proteomics">Proteomics</string>
    <string name="transcript_nomics">Transcript\nomics</string>
    <string name="epigenetics">Epigenetics</string>
    <string name="learning_materials">Learning\nMaterials</string>
    <string name="content_introduction">Content: Introduction</string>
    <string name="Exercise" />
    <string name="exercise">Exercise</string>
    <string name="exercise_flashcard">Exercise Flashcard</string>
    <string name="what_is_bioinformatics">What is Bioinformatics?</string>
    <string name="text_what_is_bioinfo">Bioinformatics involves computer technology to store and analyze biological data such as DNA/amino acid sequences. \n\nScientists use databases to collect and organize biological information in order to better understand health, diseases, and gain insights. \n\nNow, Bioinformaticians are left to understand and interpret the big amount of data that has been collected by the aid of computers.\n\n(Adams, 2022)</string>
    <string name="next">Next</string>
    <string name="multidisciplinary_field">Multidisciplinary Field</string>
    <string name="multi_field">It is a field where Biology meets Computer Science and Statistics (Nattestad, 2017). Bioinformatics has been used for in silico analysis, which means conducted or produced by computer modeling or computer simulation (Fielden et al., 2002).</string>
    <string name="previous">Previous</string>
    <string name="golden_biotechnology">Golden Biotechnology</string>
    <string name="da_silva">According to Edgar Da Silva (former Director Division of Life Sciences, UNESCO), Bioinformatics is part of Gold biotechnology, where this field uses computer science as a main driving force (DaSilva, 2004).</string>
    <string name="human_genome_project">Human Genome Project</string>
    <string name="text_hgp">The Human Genome Project was an international research project whose objective was to complete mapping and understanding of all the genes of humans (NHGRI, 2022). The project began in 1990 and finished in 2003. Approximately half of the genes identified in this project had no known function, until researchers used bioinformatics to establish their functions, develop gene-based strategies for preventing, diagnosing, and treating disease (NHGRI, 2013).</string>
    <string name="why_bioinformatics">Why Bioinformatics?</string>
    <string name="why_bioinfo">Importance of Bioinformatics (Singh &amp; Kumar, 2021): \n\n- Drug discovery and repurposing \n- Vaccine design \n- Precision medicine \n- Forensic science \n- Genome annotation and analysis \n- Protein structure prediction \n- Omics analysis \n- Etc \n\nOverall, Bioinformatics serves a lot of purpose and benefits to the world.</string>
    <string name="bioinfo_market"><![CDATA[The global bioinformatics market was valued at USD 10.1 billion in 2022 and is projected to reach USD 18.7 billion by 2027. The growth is driven by the increasing public and private-sector funding for bioinformatics, growing demand for personalized medicine, increasing pharmaceutical and biotechnology R&D expenditure, and decreasing cost of genome sequencing (Research and Markets, 2023).]]></string>
    <string name="bioinformatics_market_outlook">Bioinformatics Market Outlook</string>
    <string name="indo_companies">Indonesian Life Science Companies</string>
    <string name="nusantics">Nusantics</string>
    <string name="asa_ren">ASA REN</string>
    <string name="bgsi">BGSI</string>
    <string name="inbio">INBIO</string>
    <string name="brin">BRIN</string>
    <string name="gsi_lab">GSI Lab</string>
    <string name="international_life_science_companies">International Life Science Companies</string>
    <string name="astrazeneca">AstraZeneca</string>
    <string name="illumina">illumina</string>
    <string name="a_star">A*STAR BII</string>
    <string name="oxford_nanopore_technology">Oxford Nanopore</string>
    <string name="wellcome_sanger_institute">Wellcome Sanger</string>
    <string name="nalagenetics">Nalagenetics</string>
    <string name="references_intro"><![CDATA[Adams, D. (2022, December 23). Bioinformatics. Genome.gov. Retrieved December 26, 2022, from https://www.genome.gov/genetics-glossary/Bioinformatics \n\nDaSilva, E. J. (2004). The colours of biotechnology: science, development and humankind. Electronic journal of biotechnology, 7(3), 01-02. \n\nFielden, M. R., Matthews, J. B., Fertuck, K. C., Halgren, R. G., & Zacharewski, T. R. (2002). In silico approaches to mechanistic and predictive toxicology: an introduction to bioinformatics for toxicologists. Critical reviews in toxicology, 32(2), 67–112. https://doi.org/10.1080/20024091064183 \n\nMordor Intelligence. (n.d.). Bioinformatics Market Analysis - Industry Report - Trends, Size & Share. https://www.mordorintelligence.com/industry-reports/global-bioinformatics-market-industry \n\nNattestad, M. (2017, March 31). What is bioinformatics? OMGenomics. Retrieved December 26, 2022, from https://omgenomics.com/what-is-bioinformatics/ \n\nNHGRI. (2013, March 18). Bioinformatics: Introduction.Genome.gov. Retrieved December 26, 2022, from https://www.genome.gov/25020000/online-education-kit-bioinformatics-introduction \n\nNHGRI. (2022, August 24). What is the Human Genome Project? Retrieved April 3, 2022, from https://www.genome.gov/human-genome-project/What \n\nResearch and Markets. (2023, January 4). Bioinformatics Global Market Report 2022: Increasing Pharmaceutical and Biotechnology R&D Expenditure Bolsters Sector. GlobeNewswire News Room. https://www.globenewswire.com/news-release/2023/01/04/2582785/0/en/Bioinformatics-Global-Market-Report-2022-Increasing-Pharmaceutical-and-Biotechnology-R-D-Expenditure-Bolsters-Sector.html \n\nSingh, V., & Kumar, A. (Eds.). (2021). Advances in Bioinformatics. doi:10.1007/978-981-33-6191-1]]></string>
    <string name="question_intro_1">question_intro_1</string>
    <string name="final_msg">You\'ve completed the quiz!</string>
    <string name="return_to_home">return to home</string>
    <string name="correct_answers_0">Correct Answers = 0</string>
    <string name="wrong_answers_0">Wrong Answers = 0</string>
</resources>